Feat: optimize the dry run feature
